Change button text from 'Sloučit' to 'Zrušit'

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
   <div class="actions-row">
     <button id="mergeBtn">Analýza</button>
-    <button id="resetBtn">Sloučit</button>
+    <button id="resetBtn">Zrušit</button>
   </div>
 
   <div id="addedNamesBox"></div>
