Add flex property to actions-row buttons

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
       margin-bottom: 1.5rem;
     }
 
+    .actions-row button {
+    flex: 1;
+    }
+
     button {
       padding: 0.6rem 1.2rem;
       border: none;
